web/app/src/style/home.css
.line {
    width: 100%;
    background-color: #4b4b4b;
    height: 1px;
    margin: 100px 0;
    box-shadow: 0 -5px 15px rgba(204, 200, 200, 1);
}

.homeh1 {
    margin-top: 150px!important;
}

.heading {
    text-align: left;
    padding-left: 20px;
    font-weight: 300!important;
    font-size: 22px!important;
}

.macrocard {
    max-width: 300px;
    height: 200px;
    cursor: pointer;

    &:hover {
        background-color: #4b4b4b;
    }
}

